// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browserslist-to-esbuild > should no support android 4 1`] = `
[
  "chrome151",
]
`;

exports[`browserslist-to-esbuild > should work with android and ios 1`] = `
[
  "chrome151",
  "ios11",
]
`;

exports[`browserslist-to-esbuild > should work with ios 1`] = `
[
  "ios9",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as array 1`] = `
[
  "chrome109",
  "edge149",
  "firefox121",
  "ios15.6",
  "safari18.5",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as string 1`] = `
[
  "chrome150",
  "edge150",
  "firefox152",
  "ie10",
  "ios26.3",
  "opera127",
  "safari26.3",
]
`;
